[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/player.png" type="Texture" id=1]
[ext_resource path="res://scripts/player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.5, 8 )

[node name="KinematicBody2D" type="KinematicBody2D"]
collision_mask = 6
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ -30.0 ]
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.5, 0 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.25, 0.25 )

[node name="FloorDetector" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 4

[node name="Timers" type="Node" parent="."]

[node name="DashCooldown" type="Timer" parent="Timers"]
wait_time = 2.0

[node name="DashTime" type="Timer" parent="Timers"]

[node name="JumpTime" type="Timer" parent="Timers"]
wait_time = 1.5

[connection signal="timeout" from="Timers/DashCooldown" to="." method="_on_DashTimer_timeout"]
[connection signal="timeout" from="Timers/JumpTime" to="." method="_on_JumpTime_timeout"]
